.gws/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-gin
  namespace: go-gin
  labels:
    app: go-gin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-gin
  template:
    metadata:
      labels:
        app: go-gin
    spec:
      containers:
      - name: go-gin
        image: go-gin
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 50051
          name: grpc
          protocol: TCP
      restartPolicy: Always
